--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,11 @@ export(Station2GridIDW)
 export(discrete_convolution)
 export(fctClassify)
 export(fctlengthtem)
+export(gridParamJion)
 export(interpolation)
+export(read.grid)
 export(toMON)
 export(toNDayofYear)
 importFrom(lubridate,month)
+importFrom(plyr,join)
 importFrom(utils,read.table)
