add aggreateArray and pathFind in GeoTools

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,11 +14,17 @@ S3method(mergeData,list)
 S3method(putData,data.frame)
 S3method(putData,default)
 S3method(putData,list)
+export(BoundryString)
 export(Station2GridIDW)
+export(aggregateArray)
 export(checkData)
 export(deleteData)
 export(discrete_convolution)
+export(fctAcculation)
 export(fctClassify)
+export(fctFindNext)
+export(fctGridArea)
+export(fctNextGrid)
 export(fctlengthtem)
 export(getData)
 export(getI)
@@ -34,8 +40,17 @@ export(toNDayofYear)
 export(viewArgum)
 export(viewData)
 export(viewFuPa)
+export(viewNote)
 import(purrr)
-import(utils)
+importClassesFrom(raster,RasterLayer)
 importFrom(lubridate,month)
 importFrom(plyr,join)
+importFrom(raster,area)
+importFrom(raster,cellFromRowCol)
+importFrom(raster,cellFromXY)
+importFrom(raster,colFromCell)
+importFrom(raster,flowPath)
+importFrom(raster,raster)
+importFrom(raster,rowFromCell)
 importFrom(utils,read.table)
+importFrom(utils,str)
