--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,10 +6,11 @@ Author: person("Kan", "Lei", email = "mr_moment@outlook.com", role = "aut")
 Maintainer: The package maintainer <mr_moment@outlook.com>
 Description: There are some small tools for hydrology modell.
 Imports:
-    utils,
+    raster,
     lubridate,
     purrr,
-    plyr
+    plyr,
+    utils
 Depends:
     R (>= 3.0.0)
 License: GPL-3
