--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,7 +33,9 @@ export(interjoinData)
 export(interpolation)
 export(leftjoinData)
 export(mergeData)
+export(putAttr)
 export(putData)
+export(putUnit)
 export(read.grid)
 export(toMON)
 export(toNDayofYear)
