--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: HMtools
 Type: Package
 Title: some small tools for hydrology modell
-Version: 0.1.1
+Version: 0.1.2
 Author: person("Kan", "Lei", email = "mr_moment@outlook.com", role = "aut")
 Maintainer: The package maintainer <mr_moment@outlook.com>
 Description: There are some small tools for hydrology modell.
@@ -10,7 +10,8 @@ Imports:
     lubridate,
     purrr,
     plyr,
-    utils
+    utils,
+    methods
 Depends:
     R (>= 3.0.0)
 License: GPL-3
