fix small error

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ S3method(interjoinData,list)
 S3method(leftjoinData,data.frame)
 S3method(leftjoinData,list)
 S3method(mergeData,data.frame)
+S3method(mergeData,hm.list)
 S3method(mergeData,list)
 S3method(putData,data.frame)
 S3method(putData,default)
@@ -37,6 +38,7 @@ export(interjoinData)
 export(interpolation)
 export(leftjoinData)
 export(mergeData)
+export(mergeList)
 export(putAttr)
 export(putData)
 export(putI)
@@ -54,6 +56,7 @@ importClassesFrom(raster,RasterLayer)
 importFrom(lubridate,month)
 importFrom(methods,new)
 importFrom(plyr,join)
+importFrom(purrr,map)
 importFrom(raster,area)
 importFrom(raster,cellFromRowCol)
 importFrom(raster,cellFromXY)
