fix small error

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,26 +19,39 @@ S3method(putData,default)
 S3method(putData,list)
 export(BoundryString)
 export(Station2GridIDW)
+export(absolutabweichungVector)
+export(absolutabweichungfunk)
 export(aggregateArray)
 export(checkData)
+export(colRep)
 export(deleteData)
 export(discrete_convolution)
+export(eindim618Vector)
+export(eindim618funk)
 export(fctAcculation)
 export(fctClassify)
 export(fctFindNext)
 export(fctGridArea)
 export(fctNextGrid)
+export(fctPiecewiseFunction)
 export(fctlengthtem)
 export(getData)
 export(getI)
 export(getListI)
 export(gridParamJion)
 export(hm.list)
+export(integrateMAP2)
+export(integrateVector)
 export(interjoinData)
 export(interpolation)
 export(leftjoinData)
+export(makeLTM)
+export(maxSVector)
+export(maxVector)
 export(mergeData)
 export(mergeList)
+export(minSVector)
+export(minVector)
 export(putAttr)
 export(putData)
 export(putI)
@@ -57,6 +70,7 @@ importFrom(lubridate,month)
 importFrom(methods,new)
 importFrom(plyr,join)
 importFrom(purrr,map)
+importFrom(purrr,map2)
 importFrom(raster,area)
 importFrom(raster,cellFromRowCol)
 importFrom(raster,cellFromXY)
@@ -64,5 +78,6 @@ importFrom(raster,colFromCell)
 importFrom(raster,flowPath)
 importFrom(raster,raster)
 importFrom(raster,rowFromCell)
+importFrom(stats,integrate)
 importFrom(utils,read.table)
 importFrom(utils,str)
