add functions for sp and raster inoder to use h ggplot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,9 +35,16 @@ export(fctGridArea)
 export(fctNextGrid)
 export(fctPiecewiseFunction)
 export(fctlengthtem)
+export(geom_basin)
+export(geom_dir)
+export(geom_raster.div)
+export(geom_raster.qual)
+export(geom_raster.seq)
+export(geom_river)
 export(getData)
 export(getI)
 export(getListI)
+export(ggplot_dem)
 export(gridParamJion)
 export(hm.list)
 export(integrateMAP2)
@@ -57,15 +64,26 @@ export(putData)
 export(putI)
 export(putList)
 export(putUnit)
+export(raster.dir)
+export(raster.div)
+export(raster.qual)
+export(raster.seq)
 export(read.grid)
+export(sp.path)
 export(toMON)
 export(toNDayofYear)
 export(viewArgum)
 export(viewData)
 export(viewFuPa)
 export(viewNote)
+import(ggplot2)
 import(purrr)
 importClassesFrom(raster,RasterLayer)
+importClassesFrom(sp,SpatialPolygonsDataFrame)
+importFrom(ggplot2,geom_path)
+importFrom(ggplot2,geom_raster)
+importFrom(ggplot2,geom_segment)
+importFrom(grDevices,terrain.colors)
 importFrom(lubridate,month)
 importFrom(methods,new)
 importFrom(plyr,join)
@@ -77,7 +95,9 @@ importFrom(raster,cellFromXY)
 importFrom(raster,colFromCell)
 importFrom(raster,flowPath)
 importFrom(raster,raster)
+importFrom(raster,rasterToPoints)
 importFrom(raster,rowFromCell)
 importFrom(stats,integrate)
+importFrom(utils,head)
 importFrom(utils,read.table)
 importFrom(utils,str)
