--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,12 +7,14 @@ Maintainer: The package maintainer <mr_moment@outlook.com>
 Description: There are some small tools for hydrology modell.
 Imports:
     raster,
+    sp,
     lubridate,
     purrr,
     plyr,
     utils,
     methods,
-    stats
+    stats,
+    ggplot2
 Depends:
     R (>= 3.0.0)
 License: GPL-3
