fix small error

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ S3method(putData,default)
 S3method(putData,list)
 export(BoundryString)
 export(Station2GridIDW)
+export(Station2GridKrige)
 export(absolutabweichungVector)
 export(absolutabweichungfunk)
 export(aggregateArray)
@@ -32,7 +33,9 @@ export(fctAcculation)
 export(fctClassify)
 export(fctFindNext)
 export(fctGridArea)
+export(fctMon2Period)
 export(fctNextGrid)
+export(fctNextGridID)
 export(fctPiecewiseFunction)
 export(fctlengthtem)
 export(geom_basin)
