HMData Class and some tool functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,10 +22,11 @@ export(Atmos)
 export(BoundryString)
 export(Canopy)
 export(Energy)
-export(EvaTrans)
+export(Evatrans)
 export(GeoData)
 export(Ground)
 export(HM.Data)
+export(HM.MData)
 export(Infilt)
 export(Intercept)
 export(MetData)
@@ -74,8 +75,11 @@ export(leftjoinData)
 export(makeLTM)
 export(maxSVector)
 export(maxVector)
+export(mergeClass)
 export(mergeData)
 export(mergeList)
+export(mergeSlots)
+export(mergeSubClass)
 export(minSVector)
 export(minVector)
 export(putAttr)
