tools for combining Data from modules to model

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,11 @@ S3method("[<-",t_vari.hm.list)
 S3method("[[",t_vari.array)
 S3method("[[<-",t_vari.array)
 S3method(left_delete,hm.list)
+S3method(left_intersect,hm.list)
 S3method(left_join,hm.list)
+S3method(left_join,list)
 S3method(left_merge,hm.list)
+S3method(left_merge,list)
 export(BoundryString)
 export(Station2GridIDW)
 export(Station2GridKrige)
@@ -41,8 +44,10 @@ export(hm.list)
 export(integrateMAP2)
 export(integrateVector)
 export(interpolation)
+export(intersect_sub_list)
 export(join_sub_list)
 export(left_delete)
+export(left_intersect)
 export(left_join)
 export(left_merge)
 export(makeLTM)
@@ -59,9 +64,9 @@ export(raster.qual)
 export(raster.seq)
 export(read.grid)
 export(sp.path)
-export(t_invari.list)
+export(t_invari.hm.list)
 export(t_vari.array)
-export(t_vari.list)
+export(t_vari.hm.list)
 export(toMON)
 export(toNDayofYear)
 export(viewNote)
