--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,10 +17,12 @@ export(absolutabweichungVector)
 export(absolutabweichungfunk)
 export(aggregateArray)
 export(colRep)
+export(delete_BS_A)
 export(delete_sub_list)
 export(discrete_convolution)
 export(eindim618Vector)
 export(eindim618funk)
+export(faktor_BS)
 export(fctAcculation)
 export(fctClassify)
 export(fctFindNext)
@@ -43,6 +45,8 @@ export(gridParamJion)
 export(hm.list)
 export(integrateMAP2)
 export(integrateVector)
+export(interpolat_AF)
+export(interpolat_Kriging)
 export(interpolation)
 export(intersect_sub_list)
 export(join_sub_list)
@@ -58,6 +62,7 @@ export(minSVector)
 export(minVector)
 export(putI_sub_hm.list)
 export(putI_t_vari.array)
+export(radar_Gewicht)
 export(raster.dir)
 export(raster.div)
 export(raster.qual)
@@ -69,11 +74,13 @@ export(t_vari.array)
 export(t_vari.hm.list)
 export(toMON)
 export(toNDayofYear)
+export(umfang_best)
 export(viewNote)
 import(ggplot2)
 import(purrr)
 importClassesFrom(raster,RasterLayer)
 importClassesFrom(sp,SpatialPolygonsDataFrame)
+importFrom(geosphere,distm)
 importFrom(ggplot2,geom_path)
 importFrom(ggplot2,geom_raster)
 importFrom(ggplot2,geom_segment)
@@ -87,10 +94,17 @@ importFrom(raster,area)
 importFrom(raster,cellFromRowCol)
 importFrom(raster,cellFromXY)
 importFrom(raster,colFromCell)
+importFrom(raster,colFromX)
 importFrom(raster,flowPath)
+importFrom(raster,ncell)
 importFrom(raster,raster)
 importFrom(raster,rasterToPoints)
 importFrom(raster,rowFromCell)
+importFrom(raster,rowFromY)
+importFrom(raster,xFromCell)
+importFrom(raster,xyFromCell)
+importFrom(raster,yFromCell)
 importFrom(stats,integrate)
+importFrom(stats,na.omit)
 importFrom(utils,head)
 importFrom(utils,read.table)
