--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,9 +57,12 @@ export(left_merge)
 export(makeLTM)
 export(maxSVector)
 export(maxVector)
+export(merge_Data_Modul)
+export(merge_mdl_data2)
 export(merge_sub_list)
 export(minSVector)
 export(minVector)
+export(na_check)
 export(putI_sub_hm.list)
 export(putI_t_vari.array)
 export(radar_Gewicht)
@@ -90,6 +93,7 @@ importFrom(methods,new)
 importFrom(plyr,join)
 importFrom(purrr,map)
 importFrom(purrr,map2)
+importFrom(purrr,reduce)
 importFrom(raster,area)
 importFrom(raster,cellFromRowCol)
 importFrom(raster,cellFromXY)
